# ambuda

./: .env.docker  .gitignore  README.md  cli.py  config.py  docker-compose.dev.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
ambuda/: __init__.py  app.py  checks.py  data_utils.py  enums.py  filters.py  queries.py  s3_utils.py
ambuda/models/: auth.py  parse.py  proofing.py  site.py  texts.py
ambuda/seed/: dcs.py  text_collections.py
ambuda/tasks/: __init__.py  llm_structuring.py  ocr.py  projects.py  tagging.py  text_exports.py  utils.py
ambuda/templates/: base.html  header-main-footer.html  index.html
ambuda/utils/: assets.py  dharmamitra.py  google_ocr.py  kosha.py  llm_structuring.py  parse_alignment.py  project_utils.py  revisions.py  s3.py  slug.py  structuring.py  text_exports.py  text_publishing.py  text_utils.py  xml.py
ambuda/views/: about.py  admin.py  bharati.py  blog.py  catalog.py  ocr_eval.py  site.py
docs/: index.rst  installation.rst  managing-the-database.rst  values-and-principles.rst
docs/design/: text-collections.rst
migrations/: env.py
migrations/versions/: 0d14c5b4b080_add_text_block_associations.py  1f0affa10b64_add_page_id_to_text_blocks_table.py  202415ffd6cd_add_text_timestamps.py  3c439e646d53_add_text_config.py  3f4bacd1d993_add_project_config.py  58389549f813_add_project_uuid.py  682a19f319bc_add_text_block_bookmarks_table.py  6df22e09f833_add_token_models.py  86b67aeb9dce_add_site_config_table.py  8951ab61803e_add_author.py  a1b2c3d4e5f6_create_text_collections.py  b054e326f66b_add_project_id_to_texts_table.py  b1c2d3e4f5a6_drop_text_tags.py  c1d2e3f4a5b6_add_publish_config_collections.py  c3f44524bcf9_add_text_language.py  c5a415db630b_add_text_updated_at.py  cdd2fd862702_add_bulk_exports_table.py  (+3 more)
scripts/: dev-entrypoint.sh  install_from_scratch.sh  package_memory_overhead.py
test/ambuda/: conftest.py  test_models.py  (+3 more)
(+141 files in other folders)
